working on sound wave commit

--- a/index.html
+++ b/index.html
@@ -7,11 +7,24 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <header>
+        <div id="logo">
+            <img src="#" alt="soundwave logo">
+        </div>    
         <div class="horizon bar">
             <ul>
-                <li><a href="#">Discover</a></li>
-                <li><a href="#">Join</a></li>
+                <li><a href="discoverpage.html">Discover</a></li>
+                <li><a href="joinpage.html">Join</a></li>
             </ul>
         </div>
     </header>
+        <body>
+            <div class="bg pics">
+                <img src="#" alt="sound wave model">
+            </div>
+            <h2>Feel the music</h2>
+            <p>stream over 20 thousand songs with one click</p>
+            <div class="btn">
+                <input type="button" id="btn" name="btn" value="Join Now">
+            </div>
+        </body>
 </html>
