--- a/discoverpage.html
+++ b/discoverpage.html
@@ -36,6 +36,12 @@
                 </ul>
             </div>
             <p>By joining  you can benefit by listening to the latest<br>albulms released</p>
+                <div class="flex-container images">
+                    <img src="#" alt="an image with a flying bird">
+                    <img src="#" alt="an image w">
+                    <img src="#" alt="an image with a">
+                    <img src="#" alt="an image with an upside down lady">
+                </div>
             <footer>
                 <ul>
                   <div>
