--- a/joinpage.html
+++ b/joinpage.html
@@ -20,11 +20,11 @@
         <body>
             <h3>Join the <span style="color:crimson">fun.</span></h3>
             <div class="flex-sign-up box">
-                <label for="name">Name:</label>
+                <label for="name">Name:</label><br>
                 <input type="text" id="name" name="name" value=""><br>
-                <label for="email">Email</label>
+                <label for="email">Email</label><br>
                 <input type="email" id="email" name="email" value=""><br>
-                <label for="pwd">Password:</label>
+                <label for="pwd">Password:</label><br>
                 <input type="pwd" id="pwd" name="pwd" value=""><br><br>
                 <input type="submit" id="submit" name="submit" placeholder="Signup"><br>
             </div>    
