--- a/joinpage.html
+++ b/joinpage.html
@@ -20,6 +20,7 @@
         <body>
             <h3>Join the <span style="color:crimson">fun.</span></h3>
             <div class="flex-sign-up box">
+              <form action="/action_page.php">
                 <label for="name">Name:</label><br>
                 <input type="text" id="name" name="name" value=""><br>
                 <label for="email">Email</label><br>
@@ -27,6 +28,7 @@
                 <label for="pwd">Password:</label><br>
                 <input type="pwd" id="pwd" name="pwd" value=""><br><br>
                 <input type="submit" id="submit" name="submit" placeholder="Signup"><br>
+              </form>    
             </div>    
         </body>
 </html>    
