--- a/joinpage.html
+++ b/joinpage.html
@@ -27,7 +27,7 @@
                 <input type="email" id="email" name="email" value=""><br>
                 <label for="pwd">Password:</label><br>
                 <input type="pwd" id="pwd" name="pwd" value=""><br><br>
-                <input type="submit" id="submit" name="submit" placeholder="Signup"><br>
+                <input type="button" id="btn" name="btn" value="Signup"><br>
               </form>    
             </div>    
         </body>
