my progress at soundwave commit

--- a/discoverpage.html
+++ b/discoverpage.html
@@ -4,9 +4,10 @@
         <title>soundwave project</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="styles2.css">
     </head>
-    <header>
+    <body>
+      <div class="container">
         <div id="logo">
             <img src="#" alt="soundwave logo">
         </div>    
@@ -16,8 +17,6 @@
                 <li><a href="joinpage.html">Join</a></li>
             </ul>
         </div>
-    </header>
-        <body>
             <h2>Discover new music</h2>
             <div class="features">
                 <ul>
@@ -42,6 +41,7 @@
                     <img src="#" alt="an image with a">
                     <img src="#" alt="an image with an upside down lady">
                 </div>
+      </div>      
             <footer>
                 <ul>
                   <div>
@@ -54,5 +54,5 @@
                   </div>  
                 </ul>
             </footer>
-        </body>
+    </body>
 </html>    
