--- a/index.html
+++ b/index.html
@@ -6,25 +6,27 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
         <link rel="stylesheet" href="styles.css">
     </head>
-    <header>
+    <body>
+    <div class="container">
+      <div class="navbar">
         <div id="logo">
             <img src="#" alt="soundwave logo">
         </div>    
-        <div class="horizon bar">
+        <div class="horizonbar">
             <ul>
                 <li><a href="discoverpage.html">Discover</a></li>
                 <li><a href="joinpage.html">Join</a></li>
             </ul>
         </div>
-    </header>
-        <body>
+      </div>  
             <div class="bg pics">
                 <img src="#" alt="sound wave model">
             </div>
             <h2>Feel the music</h2>
-            <p>stream over 20 thousand songs with one click</p>
-            <div class="btn">
-                <input type="button" id="btn" name="btn" value="Join Now">
+            <p style="text-align: right;">stream over 20 thousand songs with one click</p>
+            <div class="button">
+                <button><a href="joinpage.html">Join Now</a></button>
             </div>
-        </body>
+    </div>        
+    </body>
 </html>
