--- a/joinpage.html
+++ b/joinpage.html
@@ -4,7 +4,7 @@
         <title>soundwave project</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="styles3.css">
     </head>
     <header>
         <div id="logo">
