--- a/discoverpage.html
+++ b/discoverpage.html
@@ -44,11 +44,11 @@
       </div>      
             <footer>
                 <ul>
-                  <div>
+                  <div id="link1">
                     <li><a href="#">About us</a></li>
                     <li><a href="#">Contact</a></li>
                   </div>  
-                  <div>
+                  <div id="link2">
                     <li><a href="#">Twitter</a></li>
                     <li><a href="#">Facebook</a></li>
                   </div>  
