my progress commit

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
             <h1>Feel the music</h1>
             <p style="text-align: right;">stream over 20 thousand songs with one click</p>
             <div class="button">
-                <button><a href="joinpage.html">Join Now</a></button>
+                <button>
+                    <a href="joinpage.html" class="btn">Join Now</a>
+                </button>
             </div>
     </div>        
     </body>
