--- a/joinpage.html
+++ b/joinpage.html
@@ -6,29 +6,43 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
         <link rel="stylesheet" href="styles3.css">
     </head>
-    <header>
+    <body>
+    <div class="container">
+      <div class="navbar">  
         <div id="logo">
             <img src="#" alt="soundwave logo">
         </div>    
-        <div class="horizon bar">
+        <div class="horizonbar">
             <ul>
                 <li><a href="discoverpage.html">Discover</a></li>
                 <li><a href="joinpage.html">Join</a></li>
             </ul>
         </div>
-    </header>
-        <body>
-            <h3>Join the <span style="color:crimson">fun.</span></h3>
-            <div class="flex-sign-up box">
+      </div>   
+            <h1>Join the <span><b>fun.</b></span></h1>
+            <div class="signupbox">
               <form action="/action_page.php">
                 <label for="name">Name:</label><br>
                 <input type="text" id="name" name="name" value=""><br>
                 <label for="email">Email</label><br>
                 <input type="email" id="email" name="email" value=""><br>
                 <label for="pwd">Password:</label><br>
-                <input type="pwd" id="pwd" name="pwd" value=""><br><br>
-                <input type="button" id="btn" name="btn" value="Signup"><br>
-              </form>    
-            </div>    
+                <input type="pwd" id="pwd" name="pwd" value=""><br><br><br>
+                <input type="button" id="btn" name="btn" value="Signup">
+              </form>
+            </div>
+    </div>
+        <footer>
+                <ul>
+                    <div id="link1">
+                      <li><a href="#">About us</a></li>
+                      <li><a href="#">Contact</a></li>
+                    </div>  
+                    <div id="link2">
+                      <li><a href="#">Twitter</a></li>
+                      <li><a href="#">Facebook</a></li>
+                    </div>  
+                  </ul>
+            </footer>      
         </body>
 </html>    
