--- a/discoverpage.html
+++ b/discoverpage.html
@@ -7,42 +7,52 @@
         <link rel="stylesheet" href="styles2.css">
     </head>
     <body>
-      <div class="container">
+    <div class="container">
+      <div class="navbar">
         <div id="logo">
             <img src="#" alt="soundwave logo">
         </div>    
-        <div class="horizon bar">
+        <div class="horizonbar">
             <ul>
                 <li><a href="discoverpage.html">Discover</a></li>
                 <li><a href="joinpage.html">Join</a></li>
             </ul>
         </div>
-            <h2>Discover new music</h2>
+      </div>  
+          <div class="content">
+            <h1>Discover new music</h1>
+            <div class="flex-containerimages">
+                <img src="#" alt="an image with a flying bird"><br>
+                <img src="#" alt="an image w"><br>
+                <img src="#" alt="an image with a"><br>
+                <img src="#" alt="an image with an upside down lady"><br>
+            </div>
             <div class="features">
                 <ul>
                     <div id="feature1">
-                        <i></i>
-                        <li><a href="#">Chart</a></li>
+                        <div class="text1">
+                         <i></i>
+                         <li><a href="#">Chart</a></li>
+                        </div> 
                     </div>
                     <div id="feature2">
+                       <div class="text2">
                         <i></i>
                         <li><a href="#">Albums</a></li>
+                       </div> 
                     </div>
                     <div id="feature3">
+                       <div class="3">
                         <i></i> 
                         <li><a href="#">More</a></li>
+                       </div> 
                     </div>
                 </ul>
             </div>
             <p>By joining  you can benefit by listening to the latest<br>albulms released</p>
-                <div class="flex-container images">
-                    <img src="#" alt="an image with a flying bird">
-                    <img src="#" alt="an image w">
-                    <img src="#" alt="an image with a">
-                    <img src="#" alt="an image with an upside down lady">
-                </div>
-      </div>      
-            <footer>
+          </div>  
+    </div>
+        <footer>
                 <ul>
                   <div id="link1">
                     <li><a href="#">About us</a></li>
@@ -53,6 +63,6 @@
                     <li><a href="#">Facebook</a></li>
                   </div>  
                 </ul>
-            </footer>
+        </footer>
     </body>
 </html>    
