soundwave continuation commit

--- a/joinpage.html
+++ b/joinpage.html
@@ -22,12 +22,12 @@
             <h1>Join the <span><b>fun.</b></span></h1>
             <div class="signupbox">
               <form action="/action_page.php">
-                <label for="name">Name:</label><br>
-                <input type="text" id="name" name="name" value=""><br>
-                <label for="email">Email</label><br>
-                <input type="email" id="email" name="email" value=""><br>
-                <label for="pwd">Password:</label><br>
-                <input type="pwd" id="pwd" name="pwd" value=""><br><br><br>
+                <label for="name">Name:</label><br><br>
+                <input type="text" id="name" name="name" value=""><br><br>
+                <label for="email">Email</label><br><br>
+                <input type="email" id="email" name="email" value=""><br><br>
+                <label for="pwd">Password:</label><br><br>
+                <input type="password" id="password" name="password" value=""><br><br><br>
                 <input type="button" id="btn" name="btn" value="Signup">
               </form>
             </div>
