--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
       <div class="navbar">
         <div id="logo">
-            <img src="#" alt="soundwave logo">
+            <img src="soundwave.png" alt="soundwave logo">
         </div>    
         <div class="horizonbar">
             <ul>
@@ -19,9 +19,10 @@
             </ul>
         </div>
       </div>  
-            <div class="bg pics">
-                <img src="#" alt="sound wave model">
+            <div class="bgpics">
+                <img src="image 1(1).png" alt="">
             </div>
+           <div class="content">
             <h1>Feel the music</h1>
             <p style="text-align: right;">stream over 20 thousand songs with one click</p>
             <div class="button">
@@ -29,6 +30,7 @@
                     <a href="joinpage.html" class="btn">Join Now</a>
                 </button>
             </div>
+           </div> 
     </div>        
     </body>
 </html>
