my soundwave progress commit

--- a/discoverpage.html
+++ b/discoverpage.html
@@ -10,7 +10,8 @@
     <div class="container">
       <div class="navbar">
         <div id="logo">
-            <img src="#" alt="soundwave logo">
+            <img src="logocircle.png">
+            <h3>Soundwave</h3>
         </div>    
         <div class="horizonbar">
             <ul>
@@ -20,30 +21,25 @@
         </div>
       </div>  
           <div class="content">
+            <img src="sideimg.png" class="containerimages">
             <h1>Discover new music</h1>
-            <div class="flex-containerimages">
-                <img src="#" alt="an image with a flying bird"><br>
-                <img src="#" alt="an image w"><br>
-                <img src="#" alt="an image with a"><br>
-                <img src="#" alt="an image with an upside down lady"><br>
-            </div>
             <div class="features">
                 <ul>
                     <div id="feature1">
                         <div class="text1">
-                         <i></i>
+                         <img src="chart.png" class="images"><br><br>
                          <li><a href="#">Chart</a></li>
                         </div> 
                     </div>
                     <div id="feature2">
                        <div class="text2">
-                        <i></i>
+                        <img src="Albums.png" class="images"><br><br>
                         <li><a href="#">Albums</a></li>
                        </div> 
                     </div>
                     <div id="feature3">
-                       <div class="3">
-                        <i></i> 
+                       <div class="text3">
+                        <img src="More.png" class="images"><br><br>
                         <li><a href="#">More</a></li>
                        </div> 
                     </div>
