--- a/joinpage.html
+++ b/joinpage.html
@@ -10,7 +10,8 @@
     <div class="container">
       <div class="navbar">  
         <div id="logo">
-            <img src="#" alt="soundwave logo">
+            <img src="logocircle.png">
+            <h3>Soundwave</h3>
         </div>    
         <div class="horizonbar">
             <ul>
