--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <div class="container">
       <div class="navbar">
         <div id="logo">
-            <img src="soundwave.png" alt="soundwave logo">
+            <img src="logocircle.png">
+            <h3>Soundwave</h3>
         </div>    
         <div class="horizonbar">
             <ul>
@@ -18,19 +19,15 @@
                 <li><a href="joinpage.html">Join</a></li>
             </ul>
         </div>
-      </div>  
-            <div class="bgpics">
-                <img src="image 1(1).png" alt="">
-            </div>
-           <div class="content">
+    </div>
+        <img src="model.png" class="bgpics">
+        <div class="content">
             <h1>Feel the music</h1>
-            <p style="text-align: right;">stream over 20 thousand songs with one click</p>
-            <div class="button">
-                <button>
-                    <a href="joinpage.html" class="btn">Join Now</a>
+            <p style="text-align: right;">Stream over 20 thousand songs with one click</p>
+                <button class="btn" onclick="open">
+                    <a href="joinpage.html">Join Now</a>
                 </button>
-            </div>
-           </div> 
+        </div> 
     </div>        
     </body>
 </html>
