adding responsivness commit

--- a/discoverpage.html
+++ b/discoverpage.html
@@ -5,13 +5,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
         <link rel="stylesheet" href="styles2.css">
+        <script src="https://kit.fontawesome.com/fff5420614.js" crossorigin="anonymous"></script>
     </head>
     <body>
     <div class="container">
       <div class="navbar">
         <div id="logo">
-            <img src="logocircle.png">
-            <h3>Soundwave</h3>
+            <img src="logo.png">
+            <h3><a href="index.html" class="hyper" style="cursor: pointer;" title="Landing Page">Soundwave</a></h3>
         </div>    
         <div class="horizonbar">
             <ul>
@@ -24,28 +25,26 @@
             <img src="sideimg.png" class="containerimages">
             <h1>Discover new music</h1>
             <div class="features">
-                <ul>
                     <div id="feature1">
                         <div class="text1">
-                         <img src="chart.png" class="images"><br><br>
-                         <li><a href="#">Chart</a></li>
+                         <img src="chart.png" class="png"><br><br>
+                         <p>Chart</p>
                         </div> 
                     </div>
                     <div id="feature2">
                        <div class="text2">
-                        <img src="Albums.png" class="images"><br><br>
-                        <li><a href="#">Albums</a></li>
+                        <img src="Albums.png" class="png"><br><br>
+                        <p>Albums</p>
                        </div> 
                     </div>
                     <div id="feature3">
                        <div class="text3">
-                        <img src="More.png" class="images"><br><br>
-                        <li><a href="#">More</a></li>
+                        <img src="More.png" class="png"><br><br>
+                        <p>More</p>
                        </div> 
                     </div>
-                </ul>
             </div>
-            <p>By joining  you can benefit by listening to the latest<br>albulms released</p>
+            <p class="para">By joining  you can benefit by listening to the latest<br>albulms released</p>
           </div>  
     </div>
         <footer>
@@ -55,8 +54,8 @@
                     <li><a href="#">Contact</a></li>
                   </div>  
                   <div id="link2">
-                    <li><a href="#">Twitter</a></li>
-                    <li><a href="#">Facebook</a></li>
+                    <li><a href="#"><i class="fab fa-twitter"></i>Twitter</a></li>
+                    <li><a href="#"><i class="fab fa-facebook-square"></i>Facebook</a></li>
                   </div>  
                 </ul>
         </footer>
