--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div class="container">
       <div class="navbar">
         <div id="logo">
-            <img src="logocircle.png">
-            <h3>Soundwave</h3>
+            <img src="logo.png">
+            <h3><a href="index.html" class="hyper" style="cursor: pointer;" title="Landing Page">Soundwave</a></h3>
         </div>    
         <div class="horizonbar">
             <ul>
