--- a/joinpage.html
+++ b/joinpage.html
@@ -5,13 +5,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
         <link rel="stylesheet" href="styles3.css">
+        <script src="https://kit.fontawesome.com/fff5420614.js" crossorigin="anonymous"></script>
     </head>
     <body>
     <div class="container">
       <div class="navbar">  
         <div id="logo">
-            <img src="logocircle.png">
-            <h3>Soundwave</h3>
+            <img src="logo.png">
+            <h3><a href="index.html" class="hyper" style="cursor: pointer;" title="Landing Page">Soundwave</a></h3>
         </div>    
         <div class="horizonbar">
             <ul>
@@ -38,10 +39,8 @@
                     <div id="link1">
                       <li><a href="#">About us</a></li>
                       <li><a href="#">Contact</a></li>
-                    </div>  
-                    <div id="link2">
-                      <li><a href="#">Twitter</a></li>
-                      <li><a href="#">Facebook</a></li>
+                      <li><a href="#" class="navlink"><i class="fab fa-twitter"></i>Twitter</a></li>
+                      <li><a href="#"><i class="fab fa-facebook-square"></i>Facebook</a></li>
                     </div>  
                   </ul>
             </footer>      
