all progress commit

--- a/discoverpage.html
+++ b/discoverpage.html
@@ -3,7 +3,7 @@
     <head>
         <title>soundwave project</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles2.css">
         <script src="https://kit.fontawesome.com/fff5420614.js" crossorigin="anonymous"></script>
     </head>
