--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
     <head>
         <title>soundwave project</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css">
+        <script src="https://kit.fontawesome.com/fff5420614.js" crossorigin="anonymous"></script>
     </head>
     <body>
     <div class="container">
@@ -16,7 +17,7 @@
         <div class="horizonbar">
             <ul>
                 <li><a href="discoverpage.html">Discover</a></li>
-                <li><a href="joinpage.html">Join</a></li>
+                <li><a href="joinpage.html">Join</a><i class="fas fa-bars"></i></li>
             </ul>
         </div>
     </div>
@@ -25,7 +26,7 @@
             <h1>Feel the music</h1>
             <p style="text-align: right;">Stream over 20 thousand songs with one click</p>
                 <button class="btn" onclick="open">
-                    <a href="joinpage.html">Join Now</a>
+                    <a href="joinpage.html" style="color: white;">Join Now</a>
                 </button>
         </div> 
     </div>        
